[tool.poetry]
name = "parser-youtube"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.9"
google-api-python-client = "^2.125.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
